--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -1,5 +1,46 @@
+.row {
+	&.fullwidth {
+		max-width: 100%;
+	}
+}
+
 %abstract-banner {
-	width: 100%;
 	background: gray;
+	height: 100vh;
+	height: 100%;
+	max-height: 400px;
+	width: 100vh;
+	width: 100%;
+	margin-top: 50px;
 	background-size: cover;
+}
+
+.banner {
+	@extend %abstract-banner;
+}
+
+
+.top-nav {
+	height: 50px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	background: black;
+	display: table;
+	.nav-link {
+		display: inline-block;
+		line-height: 50px;
+		padding: 0px 10px;
+		a {
+			color: white;
+			text-transform: uppercase;
+			&:hover {
+				color: $blue;
+			}
+		}
+	}	
+	.nav-button,
+	.nav-link-list {
+		float: right;
+	}
 }
