--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -27,11 +27,11 @@
 	top: 0;
 	background: black;
 	display: table;
-	.nav-link {
+	.nav-item {
 		display: inline-block;
 		line-height: 50px;
 		padding: 0px 10px;
-		a {
+		.nav-link {
 			color: white;
 			text-transform: uppercase;
 			&:hover {
