--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 // base
-@import "vendor/_normalize";
+@import "vendor/normalize";
 @import "vendor/foundation";
+@import "vendor/slick";
+
 @import "vendor/font-awesome";
 @import "modules";
 @import "typography";
