--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -5,42 +5,41 @@
 }
 
 %abstract-banner {
-	background: gray;
+	background: white;
 	height: 100vh;
 	height: 100%;
-	max-height: 400px;
+	min-height: 400px;
+	max-height: 500px;
 	width: 100vh;
 	width: 100%;
-	margin-top: 50px;
 	background-size: cover;
+	background-position: 50% 9%;
 }
 
 .banner {
 	@extend %abstract-banner;
-}
-
-
-.top-nav {
-	height: 50px;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	background: black;
-	display: table;
-	.nav-item {
-		display: inline-block;
-		line-height: 50px;
-		padding: 0px 10px;
-		.nav-link {
-			color: white;
-			text-transform: uppercase;
-			&:hover {
-				color: $blue;
-			}
-		}
-	}	
-	.nav-button,
-	.nav-link-list {
-		float: right;
+	.banner-container {
+		margin-top: 100px;
+		margin-left: 50px;
+		margin-bottom: 20px;
+		z-index: $z2;
+	}
+	.banner-header {
+		margin-top: 30px;
+		padding-bottom: 20px;
+		font-weight: 300;
+		color: $white;
+		text-transform: uppercase;
+		letter-spacing: 3px;
+		border-bottom: 2px solid $white;
+	}
+	.banner-subheader {
+		padding-top: 20px;
+		margin-bottom: 30px;
+		font-weight: 400;
+		font-size: $fontmobile;
+		color: $white;
+		letter-spacing: 2px;
+		line-height: 1.95rem;
 	}
 }
