--- a/src/styles/_base-ui.scss
+++ b/src/styles/_base-ui.scss
@@ -5,6 +5,22 @@
 		text-align: center;
 		text-transform: uppercase;
 		font-weight: 300;
+		font-size: $fontxlarger;
+		margin-top: 20px;
+		margin-bottom: 50px;
+	}
+	.section-subheader {
+		font-weight: 600;
+		color: $blue;
+		margin-bottom: 30px;
+		margin-top: 30px;
+	}
+	.section-subtitle {
+		font-size: $fontmobile;
+		font-style: italic;
+	}
+	.center {
+		text-align: center;
 	}
 	&.no-pad {
 		padding: 0;
@@ -33,13 +49,16 @@
 
 
 
+
+
+
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
   border-radius:4px;
   height: 2em;
 }
 ::-webkit-scrollbar:hover {
-  width: 5x;
+  width: 10px;
   border-radius:4px;
   height: 2em;
 }
