--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 // ui elements
 @import "buttons";
 @import "navbar";
+@import "footer";
 @import "banner";
 @import "newsbar";
 @import "base-ui";
