Starting services page

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -11,6 +11,10 @@
 	.footer-link-list {
 		.footer-link {
 			color: white;
+			line-height: $linelarger
+			&:hover {
+				
+			}
 		}
 	}
 	> .columns {
