--- a/src/styles/_modules.scss
+++ b/src/styles/_modules.scss
@@ -13,7 +13,10 @@ $bounce: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 $orange: #F0A202;
 $blue: #0078BD; 
 $black: #333; 
-$white:            #fff;
+$white: #fff;
+$lightblue: #F3F8FB;
+$gray: #cacaca;
+$grey: $gray;
 
 $blueoverlay: 	   rgba(104, 167, 185, 0.4);
 $whiteoverlay:     rgba(255,255,255,0.5);
