--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -1,3 +1,6 @@
+// Page specific styles
+
+// HOME
 .team-tile-image {
 	min-height: 600px;
 	height: 100%;
@@ -32,10 +35,27 @@
 		}
 	}
 }
-
 @include tablet {
 	.team-tile-image {
 		width: 100%;
 		min-height: 250px;
 	}
 }
+
+// ORDER TITLE
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
