--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -6,10 +6,9 @@
 
 %abstract-banner {
 	background: white;
-	height: 100vh;
-	height: 100%;
-	min-height: 400px;
+	min-height: 200px;
 	max-height: 500px;
+	padding-bottom: 100px;
 	width: 100vh;
 	width: 100%;
 	background-size: cover;
@@ -18,6 +17,11 @@
 
 .banner {
 	@extend %abstract-banner;
+	&.home-banner {
+		height: 100vh;
+		height: 100%;
+		min-height: 400px;
+	}
 	.banner-container {
 		margin-top: 100px;
 		padding-left: 50px;
