--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -17,6 +17,7 @@
 	box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  font-size: $fontmobile;
 	padding: 10px;
 	min-width: 150px;
 	min-height: 40px;
