--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -5,7 +5,7 @@
 }
 
 %abstract-banner {
-	background: white;
+	background: $blue;
 	min-height: 200px;
 	max-height: 500px;
 	padding-bottom: 100px;
