--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -13,6 +13,11 @@
 .home-slider {
 	margin-top: 50px;
 	margin-bottom: 50px;
+	.slider-images {
+		// max-width: 100px;
+		// max-height: 100px;
+		// opacity: 90;
+	}
 }
 
 .value-prop-links {
