--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "vendor/normalize";
 @import "vendor/foundation";
 @import "vendor/slick";
+@import "vendor/remodal";
 
 @import "vendor/font-awesome";
 @import "modules";
