--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -55,16 +55,18 @@
 		color: $blue;
 		border: 1px solid $blue;
 		&:hover {
-			border-color: $white;
+			background-color: $blue;
 			color: $white;
+			border: 1px solid $white;
 		}
 	}
 	&.white {
 		color: $white;
 		border: 1px solid $white;
 		&:hover {
-			border-color: $blue;
+			background-color: $white;
 			color: $blue;
+			border: 1px solid $blue;
 		}
 	}
 }
