--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -53,10 +53,47 @@ iframe#leCalcIframe {
 }
 
 
+//team page
+.section-bio {
+	margin-top: 40px;
+	padding-bottom: 40px;
+	margin-bottom: 60px;
+	border-bottom: 1px solid $gray;
+	span {
+		display: block;
+		&:last-of-type {
+			margin-bottom: 15px;
+		}
+	}
+	.bio-image {
+		width: 70px;
+		min-height: 70px;
+		max-width: 70px;
+		max-height: 80px;
+		background-image: url('../img/profile-default.svg');
+		background-size: cover;
+	}
+	.bio-name {
+		font-weight: 300;
+		text-transform: uppercase;
+		margin-bottom: 10px;
+	}
+	.bio-title {
+		font-weight: 600;
+		font-style: italic;
+	}
+}
 
-
-
-
+@include mobile {
+	.section-bio {
+		.bio-image {
+			text-align: center;
+		}
+		.bio-parapgraph {
+			display: none;
+		}
+	}
+}
 
 
 
