--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 // base
 @import "vendor/normalize";
 @import "vendor/foundation";
-@import "vendor/slick";
+// @import "vendor/slick";
 @import "vendor/remodal";
 
 @import "vendor/font-awesome";
