form styling rule modifications

--- a/src/styles/_base-ui.scss
+++ b/src/styles/_base-ui.scss
@@ -58,10 +58,9 @@
 	padding: 0 !important;
 }
 
-.acf-field .acf-label label{
-	font-weight: normal !important;
+.acf-field .acf-label{
+	margin: 0 !important;
 }
-
 
 .section-white {
 	color: $black;
