--- a/src/styles/_base-ui.scss
+++ b/src/styles/_base-ui.scss
@@ -44,6 +44,49 @@
 	}
 }
 
+.value-prop {
+	.valueprop-header {
+		font-weight: 300;
+		color: $white;
+		margin-bottom: 30px;
+		margin-top: 30px;
+	}
+	.valueprop-image {
+		max-width: 20%;
+		display: flex;
+		margin: 0 auto;
+	}
+	// today was leg day so i dont care if this sucks
+	.valueprop-link {
+		text-align: center;
+		color: $white;
+		padding-top: 60px;
+		margin-bottom: -50px;
+		&:after {
+			content:" "; 
+			height:14px; 
+			width:14px; 
+			border-right:1px solid #fff; 
+			display:block;  
+			border-bottom:1px solid #fff; 
+			display:block; 
+			-ms-transform: rotate(45deg); /* IE 9 */
+	    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+	    transform: rotate(45deg); 
+	    margin: 0 auto;
+	    margin-top: 10px;
+	    transition: .5s margin-top ease;
+		}
+		&:hover {
+
+    	&:after {
+		    margin-top: 20px;
+		    transition: .5s margin-top  ease;
+			}
+    }
+	}
+}
+
 .form-section {
 	padding: 30px;
 	&.blue {
@@ -74,6 +117,9 @@
 	padding-bottom: 80px;
 	background-color: $blue;
 	@include gradient($blue, darken($blue, 10%));
+	.section-subheader {
+		color: $white;
+	}
 }
 
 
