--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -94,6 +94,22 @@ a {
   text-decoration: none;
 }
 
+.reset-list {
+  margin-left: 10px;
+  li {
+    line-height: 1.9em;
+    margin-bottom: 5px;
+    &:last-of-type {
+      margin-bottom: 30px;
+    }
+    &:before {
+      content: "\25A0";
+      margin-right: 5px;
+      color: $blue;
+    }
+  }
+}
+
 @include mobile {
   h1 {
     font-size: $fontxlarger;
