--- a/src/styles/_base-ui.scss
+++ b/src/styles/_base-ui.scss
@@ -108,7 +108,7 @@
 	padding-top: 50px;
 	padding-bottom: 80px;
 	background-color: $blue;
-	@include gradient($blue, darken($blue, 10%));
+	@include gradient(darken($blue, 10%), $blue);
 	.section-subheader {
 		color: $white;
 	}
