--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -53,6 +53,27 @@
 		}
 	}
 }
+
+.value-prop {
+	.valueprop-header {
+		font-weight: 300;
+		color: $white;
+		margin-bottom: 30px;
+		margin-top: 30px;
+	}
+	.valueprop-image {
+		max-width: 30%;
+		display: flex;
+		margin: 0 auto;
+	}
+	.valueprop-link {
+		text-align: center;
+		color: $white;
+		padding-top: 60px;
+		margin-bottom: -50px;
+	}
+}
+
 @include tablet {
 	.team-tile-image {
 		width: 100%;
