--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -12,11 +12,15 @@
 		display: inline-block;
 		line-height: 60px;
 		padding: 0px 10px;
+		ul {
+			margin: 0;
+		}
 		.nav-link {
 			color: white;
 			padding-bottom: 5px;
 			text-transform: uppercase;
 			transition: color .1s ease-out;
+			font-size: 1em;
 			&:hover {
 				color: $blue;
 				border-bottom: 3px solid $blue;
@@ -33,9 +37,9 @@
 	}
 	.nav-logo {
 		float: left;
-		max-width: 300px;
+		max-width: 350px;
 		height: 60px;
-		width: 300px;
+		width: 350px;
 	}
 	&.scrolled {
 		background-color: $white;
@@ -66,7 +70,7 @@ object.scrolled {
 
 @include desktop {
 	.top-nav .nav-logo {
-		max-width: 250px;
+		max-width: 300px;
 	}
 	.nav-item {
 		padding: 0 5px;
@@ -75,6 +79,7 @@ object.scrolled {
 		}
 	}
 }
+
 
 
 
@@ -181,7 +186,16 @@ object.scrolled {
 }
 
 
-
+.link-list-social-icons {
+	.fa {
+		margin: 0;
+	}
+}
+@include laptop {
+	.nav-item.social-items-space {
+		display: none;
+	}
+}
 
 
 
