--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 // @import "vendor/slick";
 @import "vendor/remodal";
 
-@import "vendor/font-awesome";
+// @import "vendor/font-awesome";
 @import "modules";
 @import "typography";
 
