Fix font sizing and add to nabber

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -20,7 +20,7 @@
 			padding-bottom: 5px;
 			text-transform: uppercase;
 			transition: color .1s ease-out;
-			font-size: 1em;
+			font-size: .85em;
 			&:hover {
 				color: $blue;
 				border-bottom: 3px solid $blue;
