--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -5,6 +5,13 @@
 	button + button {
 		margin-left: 20px;
 	}
+	@include desktop {
+		a + a,
+		button + button {
+			margin-left: 0;
+			margin-top: 6px;
+		}
+	}
 	@include tablet {
 		a + a,
 		button + button {
