--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -94,7 +94,9 @@ object.scrolled {
 		z-index: $z9;
 		text-align: center;
 		transform: translate(0%,-100%);
-	  transition: transform .4s $bounce;
+	  transition: all .4s $bounce;
+	  opacity: 0;
+
 		a {
 			color: white;
 		}
@@ -125,8 +127,9 @@ object.scrolled {
 
 .mobile-nav.slide-open {
 	.nav-link-list-mobile {
+		opacity: 1;
 		transform: translate(0%,-10%);
-	  transition: transform .8s $bounce;
+	  transition: all .8s $bounce;
 	}
 }
 .toggle-wrapper {
